[package]
name = "linux_bmi088"
readme = "README.md"
description = "Interface for BMI088 IMU"
version = "0.1.1"
edition.workspace = true
authors = ["Ali Kuwajerwala <ali@kscale.dev>"]
license.workspace = true
repository.workspace = true

[lib]
name = "linux_bmi088"
crate-type = ["rlib"]

[dependencies]
byteorder = "1.5"
i2cdev = "0.6"
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
imu-traits = "0.0.2"
embedded-hal-async = "1.0.0"
linux-embedded-hal = "0.4.0"
tokio = { version = "1.0", features = ["sync", "rt", "rt-multi-thread"] }
async-trait = "0.1"